--- a/local/templates/.default/history.html
+++ b/local/templates/.default/history.html
@@ -32,7 +32,7 @@
 		<script src="js/libs/jquery-ui.datepicker_ru.min.js"></script>
 		<script src="js/app.min.js"></script>
 	</head>
-	<body class="ru js-off pm-close  inner">
+	<body class="ru js-off pm-close lk inner">
 		<div class="db g-wrap" id="db">
 			<div class="outer-bg pm-content">
 				<header class="header">
@@ -918,6 +918,133 @@
 																</div>
 							</aside>
 							<main class="g-content col-xl-9 col-lg-8 col-12" id="workarea">
+								<div class="content-wrap lk-content-wrap">
+									<div class="history-subtitle">Заказ 20.01.2021 / 3 товара на сумму 60 BYN</div>
+																		<div class="card-links-line">
+																			<div class="card-links-line__list">
+																				<div class="card-links-line__item">
+																					<div class="card-links-line__item-inner">
+																						<div class="card-links-line__item-left">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--pic"><img class="card-links-line__img" src="img/tmp/card-links-line-01.png" alt="img/tmp/card-links-line-01.png"></div>
+																							</div>
+																						</div>
+																						<div class="card-links-line__item-right">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--text">
+																									<div class="card-links-line__text">BES активный шампунь для профилактики выпадения и активации роста новых волос c1</div>
+																									<div class="card-links-line__volume">Объем: 1000ml</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--kol">
+																									<div class="card-links-line__kol"><span class="d-inline-block d-md-none">Количество:</span>1</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--cost">
+																									<div class="card-links-line__cost">22 BYN</div>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																				<div class="card-links-line__item">
+																					<div class="card-links-line__item-inner">
+																						<div class="card-links-line__item-left">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--pic"><img class="card-links-line__img" src="img/tmp/card-links-line-01.png" alt="img/tmp/card-links-line-01.png"></div>
+																							</div>
+																						</div>
+																						<div class="card-links-line__item-right">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--text">
+																									<div class="card-links-line__text">BES активный шампунь для профилактики выпадения и активации роста новых волос c1</div>
+																									<div class="card-links-line__volume">Объем: 500ml</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--kol">
+																									<div class="card-links-line__kol"><span class="d-inline-block d-md-none">Количество:</span>1</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--cost">
+																									<div class="card-links-line__cost">18 BYN</div>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																				<div class="card-links-line__item">
+																					<div class="card-links-line__item-inner">
+																						<div class="card-links-line__item-left">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--pic"><img class="card-links-line__img" src="img/tmp/card-links-line-01.png" alt="img/tmp/card-links-line-01.png"></div>
+																							</div>
+																						</div>
+																						<div class="card-links-line__item-right">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--text">
+																									<div class="card-links-line__text">BES активный шампунь для профилактики выпадения и активации роста новых волос c1</div>
+																									<div class="card-links-line__volume">Объем: 800ml</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--kol">
+																									<div class="card-links-line__kol"><span class="d-inline-block d-md-none">Количество:</span>1</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--cost">
+																									<div class="card-links-line__cost">20 BYN</div>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																			</div>
+																		</div>
+									<div class="history-subtitle">Заказ 12.03.2021 / 2 товара на сумму 100 BYN</div>
+																		<div class="card-links-line">
+																			<div class="card-links-line__list">
+																				<div class="card-links-line__item">
+																					<div class="card-links-line__item-inner">
+																						<div class="card-links-line__item-left">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--pic"><img class="card-links-line__img" src="img/tmp/card-links-line-01.png" alt="img/tmp/card-links-line-01.png"></div>
+																							</div>
+																						</div>
+																						<div class="card-links-line__item-right">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--text">
+																									<div class="card-links-line__text">BES активный шампунь для профилактики выпадения и активации роста новых волос c1</div>
+																									<div class="card-links-line__volume">Объем: 500ml</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--kol">
+																									<div class="card-links-line__kol"><span class="d-inline-block d-md-none">Количество:</span>1</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--cost">
+																									<div class="card-links-line__cost">60 BYN</div>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																				<div class="card-links-line__item">
+																					<div class="card-links-line__item-inner">
+																						<div class="card-links-line__item-left">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--pic"><img class="card-links-line__img" src="img/tmp/card-links-line-01.png" alt="img/tmp/card-links-line-01.png"></div>
+																							</div>
+																						</div>
+																						<div class="card-links-line__item-right">
+																							<div class="card-links-line__item-row">
+																								<div class="card-links-line__item-col card-links-line__item-col--text">
+																									<div class="card-links-line__text">BES активный шампунь для профилактики выпадения и активации роста новых волос c1</div>
+																									<div class="card-links-line__volume">Объем: 800ml</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--kol">
+																									<div class="card-links-line__kol"><span class="d-inline-block d-md-none">Количество:</span>1</div>
+																								</div>
+																								<div class="card-links-line__item-col card-links-line__item-col--cost">
+																									<div class="card-links-line__cost">40 BYN</div>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+																				</div>
+																			</div>
+																		</div>
+								</div>
 							</main>
 						</div>
 					</div>
