--- a/local/src_v6/components/block/lk-classes/style.scss
+++ b/local/src_v6/components/block/lk-classes/style.scss
@@ -114,3 +114,15 @@
     }
   }
 }
+
+.history-subtitle {
+  @include font-family-medium();
+  font-size: 16px;
+  line-height: 1.4;
+  color: $brand-gray-10;
+  margin-bottom: 16px;
+
+  @media (max-width: $screen-md-max) {
+    margin-bottom: 10px;
+  }
+}
