--- a/local/src_v6/components/base/forms/form_1/form/style.scss
+++ b/local/src_v6/components/base/forms/form_1/form/style.scss
@@ -14,6 +14,14 @@
   appearance: none;
   transition: all .25s ease;
 
+  .lk & {
+    @include font-family-regular();
+  }
+
+  &:valid {
+
+  }
+
   // Customize the `:focus` state to imitate native WebKit styles.
 
   &:focus {
@@ -30,7 +38,7 @@
 
   // Placeholder
   &::placeholder {
-    color: lighten($input-color, 0.7);
+    color: $brand-gray-11;
     // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
     opacity: 1;
   }
@@ -60,54 +68,106 @@
 
     &--address {
       background-image: url(../img/tmp/input-address.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-address-black.svg);
+      }
     }
 
     &--auto {
       background-image: url(../img/tmp/input-auto.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-auto-black.svg);
+      }
     }
 
     &--bag {
       background-image: url(../img/tmp/input-bag.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-bag-black.svg);
+      }
     }
 
     &--book {
       background-image: url(../img/tmp/input-book.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-book-black.svg);
+      }
     }
 
     &--comment {
       background-image: url(../img/tmp/input-comment.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-comment-black.svg);
+      }
     }
 
     &--email {
       background-image: url(../img/tmp/input-email.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-email-black.svg);
+      }
     }
 
     &--human {
       background-image: url(../img/tmp/input-human.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-human-black.svg);
+      }
     }
 
     &--location {
       background-image: url(../img/tmp/input-location.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-location-black.svg);
+      }
     }
 
     &--pass {
       background-image: url(../img/tmp/input-pass.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-pass-black.svg);
+      }
     }
 
     &--pay {
       background-image: url(../img/tmp/input-pay.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-pay-black.svg);
+      }
     }
 
     &--post {
       background-image: url(../img/tmp/input-post.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-post-black.svg);
+      }
     }
 
     &--star {
       background-image: url(../img/tmp/input-star.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-star-black.svg);
+      }
     }
 
     &--tel {
       background-image: url(../img/tmp/input-tel.svg);
+
+      &:valid {
+        background-image: url(../img/tmp/input-tel-black.svg);
+      }
     }
   }
 }
