--- a/local/src_v6/components/base/forms/form_1/select/style.scss
+++ b/local/src_v6/components/base/forms/form_1/select/style.scss
@@ -98,6 +98,13 @@
         }
       }
 
+      &--percent {
+
+        & ~ .ui-selectmenu-button {
+          background-image: url(../img/tmp/input-percent.svg);
+        }
+      }
+
       &--post {
 
         & ~ .ui-selectmenu-button {
