--- a/local/src_v6/pages/proj/lk-basket.pug
+++ b/local/src_v6/pages/proj/lk-basket.pug
@@ -2,7 +2,7 @@ extends ../tpl/main
 block pageVars
   - DB.pageTitle = 'Корзина';
   - DB.layout = 'wide';
-  - DB.bodyClass = 'no-padding-bottom lk'
+  - DB.bodyClass = 'lk'
   - DB.breadcrumb = ['Корзина']
 block title
 block breadcrumbs
