--- a/local/templates/.default/stocks.html
+++ b/local/templates/.default/stocks.html
@@ -952,7 +952,7 @@
 								<fieldset>
 									<div class="control-group">
 										<div class="input-wrap">
-											<input class="input form-control input-with-icon input-with-icon--email" type="email" name="sf_EMAIL" placeholder="Введите ваш e-mail" value="">
+											<input class="input form-control input-with-icon input-with-icon--email" type="email" name="sf_EMAIL" placeholder="Введите ваш e-mail" value="" required>
 											<div class="b-btn">
 																								<input class="btn btn-primary" name="OK" type="submit" value="подписаться на рассылку">
 											</div>
